NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/sbaa__ApprovalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Approval Settings</label>
</CustomObject>