NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DealDeskActiveApproveIconURL__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DealDeskActiveApproveIconURL__c</fullName>
    <description>URL for active approve icon on Deal Desk page.</description>
    <inlineHelpText>URL for active approve icon on Deal Desk page.</inlineHelpText>
    <label>Active Approve Icon URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>