NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DealDeskActiveRejectIconURL__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DealDeskActiveRejectIconURL__c</fullName>
    <description>URL for active reject icon on Deal Desk page.</description>
    <inlineHelpText>URL for active reject icon on Deal Desk page.</inlineHelpText>
    <label>Active Reject Icon URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>