NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DealDeskInactiveApproveIconURL__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DealDeskInactiveApproveIconURL__c</fullName>
    <description>URL for inactive approve icon on Deal Desk page.</description>
    <inlineHelpText>URL for inactive approve icon on Deal Desk page.</inlineHelpText>
    <label>Inactive Approve Icon URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>