NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DealDeskInactiveRejectIconURL__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DealDeskInactiveRejectIconURL__c</fullName>
    <description>URL for inactive reject icon on Deal Desk page.</description>
    <inlineHelpText>URL for inactive reject icon on Deal Desk page.</inlineHelpText>
    <label>Inactive Reject Icon URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>