NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DealDeskOwnershipRequired__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DealDeskOwnershipRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether ownership of parent record is required to disposition child records.</description>
    <inlineHelpText>Check to require parent record ownership to disposition child records.</inlineHelpText>
    <label>Requires Ownership</label>
    <type>Checkbox</type>
</CustomField>