NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DealDeskStylesheetURL__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DealDeskStylesheetURL__c</fullName>
    <description>URL to custom CSS on Deal Desk page.</description>
    <inlineHelpText>URL to custom CSS on Deal Desk page.</inlineHelpText>
    <label>Stylesheet URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>