NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__DisablePSLLicenseEnforcement__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DisablePSLLicenseEnforcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable PSL License Enforcement</description>
    <inlineHelpText>Disable PSL License Enforcement</inlineHelpText>
    <label>Disable PSL License Enforcement</label>
    <type>Checkbox</type>
</CustomField>