NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__HideSubmitOnPreview__c.field-meta.xml
<CustomField>
    <fullName>sbaa__HideSubmitOnPreview__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Hide the Submit button on the Preview page if the record is Pending or Approved.</description>
    <inlineHelpText>Hide the Submit button on the Preview page if the record is Pending or Approved.</inlineHelpText>
    <label>Hide Submit Button on Preview Page</label>
    <type>Checkbox</type>
</CustomField>