NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__InboundApprovalEmail__c.field-meta.xml
<CustomField>
    <fullName>sbaa__InboundApprovalEmail__c</fullName>
    <description>Email address for the Email Service used for processing inbound approval emails</description>
    <inlineHelpText>Email address for the Email Service used for processing inbound approval emails</inlineHelpText>
    <label>Inbound Approval Email</label>
    <type>Email</type>
</CustomField>