NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__InboundApprovalEmailLong__c.field-meta.xml
<CustomField>
    <fullName>sbaa__InboundApprovalEmailLong__c</fullName>
    <description>Email address for the Email Service used for processing inbound approval emails (Long)</description>
    <inlineHelpText>Email address for the Email Service used for processing inbound approval emails (Long)</inlineHelpText>
    <label>Inbound Approval Email (Long)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>