NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__InboundApprovalEmailParsing__c.field-meta.xml
<CustomField>
    <fullName>sbaa__InboundApprovalEmailParsing__c</fullName>
    <description>Line Break = Captures everything in between the first and second line breaks as comments. Blank Line = Captures everything in betweeen the first line break and the first blank line as comments.</description>
    <inlineHelpText>Line Break = Captures everything in between the first and second line breaks as comments. Blank Line = Captures everything in betweeen the first line break and the first blank line as comments.</inlineHelpText>
    <label>Approval Email Comments End Indicator</label>
    <length>200</length>
    <type>Text</type>
</CustomField>