NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalSettings__c/fields/sbaa__RejectedKeywords__c.field-meta.xml
<CustomField>
    <fullName>sbaa__RejectedKeywords__c</fullName>
    <defaultValue>&quot;Rejected,Reject,Decline,No&quot;</defaultValue>
    <description>Comma-delimited list of keywords used for rejecting via email</description>
    <inlineHelpText>Comma-delimited list of keywords used for rejecting via email</inlineHelpText>
    <label>Rejected Keywords</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>